kubernetes/manifests/system/configuration/traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-redirect-to-https
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: HostRegexp(`traefik.kfirs.com`)
      middlewares:
        - name: traefik-redirect-to-https
      services:
        - kind: TraefikService
          name: noop@internal
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-https
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`traefik.kfirs.com`)
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik-kfirs-com-tls
